<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_button"
        android:icon="@drawable/ic_check_black_24dp"
        android:orderInCategory="0"
        android:tint="@android:color/white"
        android:title="@string/done"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/test_item"
        android:orderInCategory="100"
        android:title="TestItem"
        android:visible="false"
        app:showAsAction="never" />
</menu>
