<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="1dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    card_view:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/video_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/dateButton"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/shadow_background"
                android:padding="2dp"
                app:srcCompat="@drawable/ic_check_black_24dp" />

            <LinearLayout
                android:id="@+id/seasonLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/shadow_background"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                app:layout_constraintBottom_toBottomOf="@id/episodeLabel"
                app:layout_constraintRight_toLeftOf="@id/episodeLabel"
                app:layout_constraintTop_toTopOf="@id/episodeLabel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/season_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/seasonText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/one"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/episodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/shadow_background"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                app:layout_constraintBottom_toBottomOf="@id/deleteButton"
                app:layout_constraintRight_toLeftOf="@id/deleteButton"
                app:layout_constraintTop_toTopOf="@id/deleteButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/episode_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/episodeText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/one"
                    android:textSize="24sp" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/shadow_background"
                app:srcCompat="@drawable/ic_delete_black_24dp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
