...
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBreak" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/alertInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:inputType="numberDecimal"
...
